Added Elastic view for cart item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Flipper</string>
     <string name="desc">Recent research has provided a wealth of insight about how dogs came to be domesticated by humans and the roles they played in Native American culture. DNA studies on archaeological finds suggest that dogs may have been domesticated by humans as long as 40,000 years ago. When the first humans came to North America from Eurasia, at least 12,000 years ago, domesticated dogs came with them. They appear to have been highly prized by early North American hunter-gatherers and were their only animal companions for centuries, since there were no horses on the continent until the 16th century.</string>
+    <string name="sony_xm4">Sony WH-10000XM4 Industry Leading Wireless Noise Cancelling Headpone</string>
+    <string name="sony_xm4_price">$355.21</string>
+    <string name="in_stock">In stock</string>
 </resources>
